--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -50,7 +50,52 @@ input::-webkit-inner-spin-button {
 }
 .secondSection{
     background-image: url('../../../assets/bg.jpg');
-    min-height: 800px;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 100vh; /* Adjust the height as needed */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            /* text-align: center; */
+}
+.bg1{
+    background-image: url('../../../assets/bg1.jpg');
+    background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: auto; /* Adjust the height as needed */
+            padding: 10% 10% 10% 15%;
+            justify-content: center;
+            align-items: center;
+}
+.bg1 p{
+    font-size:large
+}
+.photo{
+    border-color: white 1px solid;
+}
+.btn-enroll{
+    background-image: url('../../../assets/button.png');
+    background-size: cover;
+    background-position: center;
+    width: 300px;
+    height: 70px;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;
+}
+.bg2{
+    background-image: url('../../../assets/bg2.jpg');
+    background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: auto; /* Adjust the height as needed */
+            padding: 10% 5% 7% 5%;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+
 }
 .alert-success {
     position: fixed;
