--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -73,5 +73,5 @@
 
 <footer>
     <p>Stay Inspired and Keep Learning!</p>
-    <p>&copy; {{ currentYear }}  Realroom360. All rights reserved.</p>
+    <p>&copy; {{ currentYear }}  Realroom360 Technologies. All rights reserved.</p>
 </footer>
