--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -203,5 +203,5 @@ Ready to Speak English Confidently?
 </section>
 <footer>
   <p>Stay Inspired and Keep Learning!</p>
-  <p>&copy; {{ currentYear }}  Realroom360. All rights reserved.</p>
+  <p>&copy; {{ currentYear }}  Realroom360 Technologies. All rights reserved.</p>
 </footer>
