--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -53,7 +53,7 @@ input::-webkit-inner-spin-button {
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            height: 100vh; /* Adjust the height as needed */
+            height: auto; /* Adjust the height as needed */
             display: flex;
             justify-content: center;
             align-items: center;
