--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -30,31 +30,21 @@
        <h3>Key Features:</h3> 
     <ol>
         <li>
-            <p><strong>Courses: </strong> Choose from a range of courses, from grammar to conversation skills.</p>
+            <p><strong>Focus on easy and effective communication in daily conversations </strong> </p>
         </li>
         <li>
-            <p><strong>Progress Tracker: </strong> Monitor your progress, scores, and achievements.</p>
+            <p><strong>Course content delivered in a friendly and engaging manner</strong> </p>
         </li>
-    
-    <li>
-        <p><strong>Interactive Quizzes </strong> Test your knowledge and get instant feedback.</p>
-    </li>
-    
-    <li>
-        <p><strong>Grammar Drills:  </strong>Master English grammar with interactive exercises.</p>
-    </li>
-    
-    <li><p><strong>Vocabulary Builder: </strong> Expand your word usage with contextual exercises.</p>
-    </li>
-    
-    <li>
-        <p><strong>Language Proficiency Tests:</strong> Prepare for TOEFL and IELTS.</p>
-    </li>
-    
-    <li>
-        <p><strong>Personalized Learning:</strong>
-    Our platform tailors content to your style and progress for a unique experience.</p>
-    </li>
+        <li>
+            <p><strong>Quizzes to check your progress after each session </strong> </p>
+        </li>
+        <li>
+            <p><strong>Opportunity to clarify any course-related doubts with the instructor</strong> </p>
+        </li>
+        <li>
+            <p><strong>Earn a certificate on successful completion of the course</strong> </p>
+        </li>
+        
     
     </ol>
     
