--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -45,7 +45,7 @@
             </div>
             <div *ngIf="result.result!=''" class="col-md-6 mt-4">
                 <label for="">Exam Result</label>
-                <h4 *ngIf="result.result=='PASS'" class="text-success text-bold">{{result.result}}</h4>
+                <h4 *ngIf="result.result=='PASS'" class="text-success text-bold">{{result.result}} <span class="text-dark">( {{result.totalscore}} )</span></h4>
                 <div *ngIf="certificateUrl!=''" class="certificate text-center d-flex mt-1">
                     <h5>Certificate</h5>
                     <a [href]="certificateUrl" target="_blank" style="margin-left: 2%;">{{title}} </a>
